--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,8 @@
 services:
   app:
-    build: .
-    image: whiteleaf/narou
+    build:
+      context: .
+      dockerfile: Dockerfile
     command: ["narou", "web", "-np", "33000"]
     volumes:
       - .:/novel:cached
